# qa_guru_8_python_hw_19_REST_API

./: .gitignore  README.md  pyproject.toml
tests/: test_demoshop.py  test_reqres_api.py  utils.py
